using Cortex.Mediator.Notifications;

namespace SmilingCup_Backend.Shared.domain.model.events;

public interface IEvent : INotification
{
    
}