namespace SmilingCup_Backend.profiles.domain.model.valueobjects;

public enum Month
{
    January,
    February,
    March,
    April,
    May,
    June,
    July,
    August,
    September,
    October,
    November,
    December
}